remove root-methods from ModelType as
the enumeration is now for RootEntity types only